--- a/Resume.html
+++ b/Resume.html
@@ -12,8 +12,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="biodata.html">Bio-data</a></li>
+        <li><a href="Resume.html">Resume</a></li>
+        <li><a href="Biodata.html">Bio-data</a></li>
       </ul>
     </nav>
   </header>
